<resources>
    <string name="a">EXIT</string>
    <string name="b">Navigate home</string>
    <string name="c">Navigate up</string>
    <string name="d">More options</string>
    <string name="e">Done</string>
    <string name="f">See all</string>
    <string name="g">Choose an app</string>
    <string name="h">OFF</string>
    <string name="i">ON</string>
    <string name="j">Alt+</string>
    <string name="k">Ctrl+</string>
    <string name="l">delete</string>
    <string name="m">enter</string>
    <string name="n">Function+</string>
    <string name="o">Meta+</string>
    <string name="p">Shift+</string>
    <string name="q">space</string>
    <string name="r">Sym+</string>
    <string name="s">Menu+</string>
    <string name="t">Search…</string>
    <string name="u">Clear query</string>
    <string name="v">Search query</string>
    <string name="w">Search</string>
    <string name="x">Submit query</string>
    <string name="y">Voice search</string>
    <string name="z">Share with</string>
    <string name="a0">Share with %s</string>
    <string name="a1">Collapse</string>
    <string name="a2">Settings</string>
    <string name="a3">Welcome</string>
    <string name="a4">"The privacy policy is updated to adapt to the EU General Data Protection Regulation (GDPR). You can read it in #.

Please click \"Continue\" to agree to the policy and use all features of this product. Click \"I don't agree\" on # page if you don't want any personal data to be collected."</string>
    <string name="a5">Continue</string>
    <string name="a6">Privacy policy</string>
    <string name="a7">Showing ads</string>
    <string name="a8">Align</string>
    <string name="a9">Allow Storage Access</string>
    <string name="a_">To edit photo, Background Eraser needs access to your photo library.</string>
    <string name="aa">To edit photo, Background Eraser needs access to your photo library.</string>
    <string name="ab">Background Eraser</string>
    <string name="ac">Download %s or share with other apps</string>
    <string name="ad">DOWNLOAD %s</string>
    <string name="ae">SHARE WITH OTHERS</string>
    <string name="af">%s is not installed</string>
    <string name="ag">CHECK OUT</string>
    <string name="ah">Most popular apps today!</string>
    <string name="ai">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="aj">Background</string>
    <string name="ak">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="al">点击加载更多</string>
    <string name="am">没有更多数据</string>
    <string name="an">加载失败，请点我重试</string>
    <string name="ao">正在加载中...</string>
    <string name="ap">Cancel</string>
    <string name="aq">Canvas</string>
    <string name="ar">Select Language</string>
    <string name="as">Characters entered %1$d of %2$d</string>
    <string name="at">Character limit exceeded %1$d of %2$d</string>
    <string name="au">%1$d / %2$d</string>
    <string name="av">Chip text</string>
    <string name="aw">Clear text</string>
    <string name="ax">You can select at most %s photos!</string>
    <string name="com.crashlytics.android.build_id">eb863e863b01472c84c28ae0ea55eb99</string>
    <string name="ay">Enable</string>
    <string name="az">"%1$s won't work unless you enable Google Play services."</string>
    <string name="b0">Enable Google Play services</string>
    <string name="b1">Install</string>
    <string name="b2">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="b3">Get Google Play services</string>
    <string name="b4">Google Play services availability</string>
    <string name="b5">Google Play services error</string>
    <string name="b6">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="b7">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="b8">Update</string>
    <string name="b9">"%1$s won't run unless you update Google Play services."</string>
    <string name="b_">Update Google Play services</string>
    <string name="ba">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="bb">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="bc">Open on phone</string>
    <string name="bd">Sign in</string>
    <string name="be">Sign in with Google</string>
    <string name="bf">Confirm</string>
    <string name="bg">Custom</string>
    <string name="bh">Custom Ratio</string>
    <string name="bi">Aspect ratio should be between 0.5 and 2.0. Please try again.</string>
    <string name="bj">Outline the object to cut</string>
    <string name="default_web_client_id">414364349330-uj9j4aku1vg4583mhnpmd7vjr758fmji.apps.googleusercontent.com</string>
    <string name="bk">Degree</string>
    <string name="bl">Do you want to delete?</string>
    <string name="bm">Discard changes</string>
    <string name="bn">Download</string>
    <string name="bo">Downloading resource…</string>
    <string name="bp">Edit</string>
    <string name="bq">"1. Erase unwanted area or repair the photo 
2. Zoom in/out the photo by fingers"</string>
    <string name="br">3. Adjust the cursor offset degree</string>
    <string name="bs">Erase &amp; Repair</string>
    <string name="bt">Erase unwanted area or repair the photo</string>
    <string name="bu">Error</string>
    <string name="bv">Exit</string>
    <string name="bw">Press again to exit</string>
    <string name="bx">Show dropdown menu</string>
    <string name="by">Please describe the detailed step to reproduce the issue.</string>
    <string name="bz">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="c0">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="c1">Feedback and suggestion</string>
    <string name="c2">NOT NOW</string>
    <string name="c3">Feedback to BackgroundEraser</string>
    <string name="c4">SUBMIT</string>
    <string name="c5">File corrupted, please reinstall BackgroundEraser from Google Play</string>
    <string name="c6">Dear user</string>
    <string name="c7">This kind of file is not supported by BackgroundEraser.</string>
    <string name="c8">lib_promote_ad</string>
    <string name="c9">FILTER</string>
    <string name="firebase_database_url">https://background-eraser-5e990.firebaseio.com</string>
    <string name="c_">Original</string>
    <string name="ca">Folder can not write! Please choose another one.</string>
    <string name="cb">Crop</string>
    <string name="gcm_defaultSenderId">414364349330</string>
    <string name="cc">GET FROM GOOGLE PLAY</string>
    <string name="google_api_key">AIzaSyBIg3FLszFymgc5yExOwjsplUdpgj92-As</string>
    <string name="google_app_id">1:414364349330:android:0d414c9e4965de6fd3074b</string>
    <string name="google_crash_reporting_api_key">AIzaSyBIg3FLszFymgc5yExOwjsplUdpgj92-As</string>
    <string name="cd">background-eraser-5e990.appspot.com</string>
    <string name="ce">Erase unwanted area by finger</string>
    <string name="cf">You have purchased!</string>
    <string name="cg">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="ch">High Resolution</string>
    <string name="ci">Up to 4096px. It also depends on original resolution and phone memory.</string>
    <string name="cj">Dialog Icon</string>
    <string name="ck">Info Code:</string>
    <string name="cl">Install</string>
    <string name="cm">Cancel</string>
    <string name="cn">CLOSE</string>
    <string name="co">Rate on Google play</string>
    <string name="cp">Rate</string>
    <string name="cq">Submit</string>
    <string name="cr">"We are working hard for a better user experience.
We’d greatly appreciate if you can rate us."</string>
    <string name="cs">I don’t like the design</string>
    <string name="ct">It doesn’t have the functions I need</string>
    <string name="cu">It’s not easy to use</string>
    <string name="cv">It’s too complicated</string>
    <string name="cw">The translation is poor</string>
    <string name="cx">Your feedback is useful.</string>
    <string name="cy">"Other users will benefit from your review. 

Please leave your review on Google Play."</string>
    <string name="cz">The best we can get :)</string>
    <string name="d0">Please leave us some feedback.</string>
    <string name="d1">We like you too!</string>
    <string name="d2">Loved it</string>
    <string name="d3">Oh, no!</string>
    <string name="d4">sans-serif-medium</string>
    <string name="d5">sans-serif</string>
    <string name="d6">Thanks for your feedback.</string>
    <string name="d7">Loading…</string>
    <string name="d8">Photo edge can be detected automatically</string>
    <string name="d9">Message</string>
    <string name="d_">Move Down</string>
    <string name="da">Move Up</string>
    <string name="db">New notification</string>
    <string name="dc">Remove %1$s</string>
    <string name="dd">%1$d%2$s</string>
    <string name="de">Change to next month</string>
    <string name="df">Change to previous month</string>
    <string name="dg">Current selection: %1$s</string>
    <string name="dh">@android:string/cancel</string>
    <string name="di">@android:string/ok</string>
    <string name="dj">%1$s</string>
    <string name="dk">Select a Date</string>
    <string name="dl">Selected date</string>
    <string name="dm">Column of days: %1$s</string>
    <string name="dn">Invalid format.</string>
    <string name="do">Example: %1$s</string>
    <string name="dp">Use: %1$s</string>
    <string name="dq">Invalid range.</string>
    <string name="dr">Navigate to year %1$s</string>
    <string name="ds">Out of range: %1$s</string>
    <string name="dt">Start date – %1$s</string>
    <string name="du">%1$s – End date</string>
    <string name="dv">%1$s – %2$s</string>
    <string name="dw">Select a Date Range</string>
    <string name="dx">Start date – End date</string>
    <string name="dy">Save</string>
    <string name="dz">Date</string>
    <string name="e0">End date</string>
    <string name="e1">Start date</string>
    <string name="e2">d</string>
    <string name="e3">m</string>
    <string name="e4">y</string>
    <string name="e5">Switch to calendar input mode</string>
    <string name="e6">Tap to switch to selecting a day</string>
    <string name="e7">Switch to text input mode</string>
    <string name="e8">Tap to switch to selecting a year</string>
    <string name="e9">Select Multiple 1–10</string>
    <string name="e_">Network is unavailable!</string>
    <string name="ea">Oops. Network unavailable</string>
    <string name="eb">Save to stickers.</string>
    <string name="ec">No</string>
    <string name="ed">"Images don't exist. Please pick or capture others."</string>
    <string name="ee">Tap to open ad</string>
    <string name="ef">View the ad you saved when you were offline</string>
    <string name="eg">OK</string>
    <string name="eh">"You'll get a notification with the link when you're back online"</string>
    <string name="ei">No thanks</string>
    <string name="ej">"We'll send you a notification with a link to the advertiser site."</string>
    <string name="ek">"Open ad when you're back online."</string>
    <string name="el">Offset</string>
    <string name="em">OK</string>
    <string name="es">Outline</string>
    <string name="g9">Regular Resolution</string>
    <string name="g_">Up to 1920px. Good for sharing on social network.</string>
    <string name="gd">report</string>
    <string name="gf">Resolution</string>
    <string name="gp">sans-serif-condensed</string>
    <string name="gr">sans-serif-medium</string>
    <string name="gs">sans-serif</string>
    <string name="hi">Shadow</string>
    <string name="hz">Text</string>
    <string name="i8">TRY AGAIN</string>
</resources>