<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/h3" android:layout_width="fill_parent" android:layout_height="fill_parent" android:minWidth="300.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.camerasideas.collagemaker.activity.widget.FontTextView android:textSize="20.0sp" android:textColor="@color/bh" android:gravity="start|center" android:layout_gravity="start|center" android:id="@id/m7" android:background="#00000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="24.0dip" android:layout_marginBottom="20.0dip" android:text="@string/af" />
    <com.camerasideas.collagemaker.activity.widget.FontTextView android:textSize="16.0sp" android:textColor="@color/bh" android:gravity="start|center" android:layout_gravity="start|center" android:id="@id/m6" android:background="#00000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginRight="24.0dip" android:layout_marginBottom="20.0dip" android:text="@string/ac" />
    <com.camerasideas.collagemaker.activity.widget.FontTextView android:textSize="14.0sp" android:textColor="@color/b6" android:gravity="end|center" android:layout_gravity="end|center" android:id="@id/ds" android:background="@drawable/ch" android:paddingLeft="24.0dip" android:paddingRight="24.0dip" android:layout_width="fill_parent" android:layout_height="48.0dip" android:text="@string/ad" android:fontFamily="sans-serif-medium" />
    <com.camerasideas.collagemaker.activity.widget.FontTextView android:textSize="14.0sp" android:textColor="@color/b6" android:gravity="end|center" android:layout_gravity="end|center" android:id="@id/ei" android:background="@drawable/ch" android:paddingLeft="24.0dip" android:paddingRight="24.0dip" android:layout_width="fill_parent" android:layout_height="48.0dip" android:text="@string/ae" android:fontFamily="sans-serif-medium" />
    <com.camerasideas.collagemaker.activity.widget.FontTextView android:textSize="14.0sp" android:textColor="@color/b6" android:gravity="end|center" android:layout_gravity="end|center" android:id="@id/df" android:background="@drawable/ch" android:paddingLeft="24.0dip" android:paddingRight="24.0dip" android:layout_width="fill_parent" android:layout_height="48.0dip" android:layout_marginBottom="8.0dip" android:text="@string/ap" android:fontFamily="sans-serif-medium" />
</LinearLayout>