<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/gh" android:background="@drawable/en" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="130.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.camerasideas.collagemaker.activity.widget.FontTextView android:textSize="16.0sp" android:textColor="#fff3f3f3" android:id="@id/t2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/bo" android:layout_marginStart="15.0dip" android:layout_marginEnd="15.0dip" app:layout_constraintEnd_toEndOf="mj" app:layout_constraintStart_toStartOf="mj" app:layout_constraintTop_toTopOf="mj" />
    <ProgressBar android:id="@id/mn" android:visibility="visible" android:layout_width="40.0dip" android:layout_height="40.0dip" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:max="100" android:indeterminate="false" app:layout_constraintBottom_toTopOf="@id/e8" app:layout_constraintEnd_toEndOf="mj" app:layout_constraintStart_toStartOf="mj" app:layout_constraintTop_toBottomOf="@id/t2" style="?android:progressBarStyle" />
    <com.camerasideas.collagemaker.activity.widget.FontTextView android:textSize="14.0sp" android:textColor="#fff3f3f3" android:id="@id/ss" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/bn" android:layout_marginStart="15.0dip" android:layout_marginEnd="15.0dip" app:layout_constraintEnd_toEndOf="mj" app:layout_constraintStart_toStartOf="mj" app:layout_constraintTop_toBottomOf="@id/t2" />
    <com.camerasideas.collagemaker.activity.widget.FontTextView android:textSize="14.0sp" android:textColor="#ff0098ff" android:id="@id/e8" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:layout_marginBottom="15.0dip" android:text="@string/i8" android:fontFamily="@string/gr" android:layout_marginEnd="20.0dip" app:layout_constraintBottom_toBottomOf="mj" app:layout_constraintEnd_toEndOf="mj" app:layout_constraintTop_toBottomOf="@id/ss" app:layout_goneMarginTop="55.0dip" />
    <com.camerasideas.collagemaker.activity.widget.FontTextView android:textSize="14.0sp" android:textColor="#ff0098ff" android:id="@id/e3" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ap" android:fontFamily="@string/gr" android:layout_marginEnd="25.0dip" app:layout_constraintBottom_toBottomOf="@id/e8" app:layout_constraintEnd_toStartOf="@id/e8" />
</androidx.constraintlayout.widget.ConstraintLayout>