<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/q7" android:background="@color/hq" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minWidth="332.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.camerasideas.collagemaker.activity.widget.FontTextView android:textSize="16.0sp" android:textColor="#ff484848" android:gravity="start|center" android:layout_gravity="start|center" android:id="@id/gw" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginTop="28.0dip" android:layout_marginRight="24.0dip" android:layout_marginBottom="16.0dip" android:text="@string/bl" android:fontFamily="sans-serif-medium" />
    <com.camerasideas.collagemaker.activity.widget.FontTextView android:textSize="16.0sp" android:textColor="#ff484848" android:gravity="start|center" android:layout_gravity="start|center" android:id="@id/j_" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginRight="24.0dip" android:layout_marginBottom="16.0dip" android:text="@string/ck" android:fontFamily="sans-serif" />
    <LinearLayout android:gravity="end|center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="48.0dip" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" android:layout_marginBottom="8.0dip">
        <Button android:textSize="14.0sp" android:textColor="@color/by" android:gravity="center" android:layout_gravity="center" android:id="@id/e5" android:background="@drawable/cg" android:paddingLeft="8.0dip" android:paddingRight="8.0dip" android:layout_width="wrap_content" android:layout_height="36.0dip" android:text="@string/ec" android:fontFamily="sans-serif-medium" />
        <Button android:textSize="14.0sp" android:textColor="@color/by" android:gravity="center" android:layout_gravity="center" android:id="@id/eb" android:background="@drawable/cg" android:paddingLeft="8.0dip" android:paddingRight="8.0dip" android:layout_width="wrap_content" android:layout_height="36.0dip" android:minWidth="68.0dip" android:text="@string/gd" android:fontFamily="sans-serif-medium" />
    </LinearLayout>
</LinearLayout>