<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:background="@color/h3" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.AppCompatTextView android:textSize="22.0sp" android:textColor="@color/hq" android:id="@id/s_" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/o5" android:text="@string/gf" android:fontFamily="@string/gs" android:layout_marginStart="22.0dip" app:layout_constraintBottom_toTopOf="@id/dv" app:layout_constraintStart_toStartOf="mj" app:layout_constraintTop_toTopOf="mj" />
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/dv" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" app:layout_constraintEnd_toEndOf="mj" app:layout_constraintStart_toStartOf="mj" app:layout_constraintTop_toBottomOf="@id/s_">
        <RadioButton android:id="@id/nw" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginStart="15.0dip" app:layout_constraintStart_toStartOf="mj" app:layout_constraintTop_toTopOf="mj" />
        <com.camerasideas.collagemaker.activity.widget.FontTextView android:textSize="15.0sp" android:textColor="@color/hq" android:id="@id/sb" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:text="@string/ch" android:layout_marginStart="8.0dip" app:layout_constraintBottom_toBottomOf="@id/nw" app:layout_constraintStart_toEndOf="@id/nw" app:layout_constraintTop_toTopOf="@id/nw" />
        <com.camerasideas.collagemaker.activity.widget.FontTextView android:textSize="14.0sp" android:textColor="#ff909090" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginRight="15.0dip" android:text="@string/ci" android:fontFamily="@string/gs" android:layout_marginEnd="15.0dip" app:layout_constraintEnd_toEndOf="mj" app:layout_constraintStart_toStartOf="@id/sb" app:layout_constraintTop_toBottomOf="@id/sb" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/ea" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:layout_marginBottom="40.0dip" app:layout_constraintBottom_toBottomOf="mj" app:layout_constraintEnd_toEndOf="mj" app:layout_constraintStart_toStartOf="mj" app:layout_constraintTop_toBottomOf="@id/dv">
        <RadioButton android:id="@id/ny" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginStart="15.0dip" app:layout_constraintStart_toStartOf="mj" app:layout_constraintTop_toTopOf="mj" />
        <com.camerasideas.collagemaker.activity.widget.FontTextView android:textSize="15.0sp" android:textColor="@color/hq" android:id="@id/sc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:text="@string/g9" android:layout_marginStart="8.0dip" app:layout_constraintBottom_toBottomOf="@id/ny" app:layout_constraintStart_toEndOf="@id/ny" app:layout_constraintTop_toTopOf="@id/ny" />
        <com.camerasideas.collagemaker.activity.widget.FontTextView android:textSize="14.0sp" android:textColor="#ff909090" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginRight="15.0dip" android:text="@string/g_" android:fontFamily="@string/gs" android:layout_marginEnd="15.0dip" app:layout_constraintEnd_toEndOf="mj" app:layout_constraintStart_toStartOf="@id/sc" app:layout_constraintTop_toBottomOf="@id/sc" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>