<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:gravity="center" android:orientation="vertical" android:background="@color/hq" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.recyclerview.widget.RecyclerView android:id="@id/my" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/oc" app:layout_constraintEnd_toEndOf="mj" app:layout_constraintStart_toStartOf="mj" app:layout_constraintTop_toTopOf="mj" />
    <View android:id="@id/k_" android:background="#fff5f5f5" android:layout_width="fill_parent" android:layout_height="0.5dip" android:layout_marginTop="@dimen/o5" app:layout_constraintTop_toBottomOf="@id/my" />
    <LinearLayout android:orientation="horizontal" android:id="@id/s2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/oc" app:layout_constraintTop_toBottomOf="@id/k_">
        <com.camerasideas.collagemaker.activity.widget.FontTextView android:textSize="@dimen/vy" android:textColor="@color/h2" android:gravity="center" android:id="@id/en" android:background="@drawable/dd" android:layout_width="wrap_content" android:layout_height="@dimen/og" android:text="@string/hz" android:layout_weight="1.0" android:layout_marginStart="@dimen/o3" app:text_font="l" />
        <com.camerasideas.collagemaker.activity.widget.FontTextView android:textSize="@dimen/vy" android:textColor="@color/h2" android:gravity="center" android:id="@id/e7" android:background="@drawable/dd" android:layout_width="wrap_content" android:layout_height="@dimen/og" android:text="@string/es" android:layout_weight="1.0" android:layout_marginStart="@dimen/q5" app:text_font="l" />
        <com.camerasideas.collagemaker.activity.widget.FontTextView android:textSize="@dimen/vy" android:textColor="@color/h2" android:gravity="center" android:id="@id/de" android:background="@drawable/dd" android:layout_width="wrap_content" android:layout_height="@dimen/og" android:text="@string/aj" android:layout_weight="1.0" android:layout_marginStart="@dimen/q5" app:text_font="l" />
        <com.camerasideas.collagemaker.activity.widget.FontTextView android:textSize="@dimen/vy" android:textColor="@color/h2" android:gravity="center" android:id="@id/ee" android:background="@drawable/dd" android:layout_width="wrap_content" android:layout_height="@dimen/og" android:text="@string/hi" android:layout_weight="1.0" android:layout_marginStart="@dimen/q5" app:text_font="l" />
        <com.camerasideas.collagemaker.activity.widget.FontTextView android:textSize="@dimen/vy" android:textColor="@color/h2" android:gravity="center" android:id="@id/d6" android:background="@drawable/dd" android:layout_width="wrap_content" android:layout_height="@dimen/og" android:text="@string/a8" android:layout_weight="1.0" android:layout_marginStart="@dimen/q5" android:layout_marginEnd="@dimen/o3" app:text_font="l" />
    </LinearLayout>
    <FrameLayout android:id="@id/hb" android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_marginTop="@dimen/oc" app:layout_constraintBottom_toBottomOf="mj" app:layout_constraintEnd_toEndOf="mj" app:layout_constraintStart_toStartOf="mj" app:layout_constraintTop_toBottomOf="@id/s2" />
</androidx.constraintlayout.widget.ConstraintLayout>